re-structure, create launch config for xsl

--- a/site/faq.html
+++ b/site/faq.html
@@ -2,10 +2,10 @@
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/custom.css" rel="stylesheet">
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
+<meta content="width=device-width, initial-scale=1" name="viewport">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/custom.css">
 <title>MKAT</title>
 <script type="text/javascript">
 	function selectMenuById ( id ) {
@@ -23,47 +23,47 @@
 	</script>
 </head>
 <body>
-<nav class="mkat-nav" role="navigation">
+<nav role="navigation" class="mkat-nav">
 <div class="container-fluid">
 <div class="row">
 <div class="col-xs-0 col-md-1 col-lg-2"></div>
 <div class="col-xs-12 col-md-4 col-lg-3 mkat-brand">
-<img src="images/logo.png" class="img-responsive"></div>
+<img class="img-responsive" src="images/logo.png"></div>
 <div class="col-xs-12 col-md-7 col-lg-7 mkat-menu">
 <ul>
 <li id="faq">
-<a class="menu-entry" href="index.html">Wer sind wir?</a>
+<a href="index.html" class="menu-entry">Wer sind wir?</a>
 </li>
 <li>
-<a class="menu-entry" href="index.html#member">Mitglied werden</a>
+<a href="index.html#member" class="menu-entry">Mitglied werden</a>
 </li>
 <li>
-<a target="_blank" href="https://buchung.elkato.de/mkat">Zur Buchung</a>
+<a href="https://buchung.elkato.de/mkat" target="_blank">Zur Buchung</a>
 </li>
 <li>
-<a class="menu-entry" href="index.html#downloads">Downloads</a>
+<a href="index.html#downloads" class="menu-entry">Downloads</a>
 </li>
 <li class="active">
-<a class="menu-entry" href="">FAQ</a>
+<a href="" class="menu-entry">FAQ</a>
 </li>
 <li>
-<a class="menu-entry" href="index.html#impress">Impressum</a>
+<a href="index.html#impress" class="menu-entry">Impressum</a>
 </li>
 </ul>
 </div>
 </div>
 </div>
 </nav>
-<div id="main" class="container-fluid">
+<div class="container-fluid" id="main">
 <div class="row">
 <div class="col-xs-12 imagebox">
-<img src="images/MKAT_web_head_street_1280x365_150101.jpg" class="img-responsive"></div>
+<img class="img-responsive" src="images/MKAT_web_head_street_1280x365_150101.jpg"></div>
 </div>
 <div class="row">
 <div class="col-xs-0 col-md-1 col-lg-2"></div>
 <div class="col-xs-12 col-md-10 col-lg-8">
 <span id="top"></span>
-<div id="faq" class="topic"></div>
+<div class="topic" id="faq"></div>
 <h2>&Uuml;bersicht</h2>
 <ul>
 
@@ -72,27 +72,27 @@
 	
 		
 <li>
-<a href="#N65544">Welche Autos gibt es?</a>
+<a href="#N10008">Welche Autos gibt es?</a>
 </li>
 	
 		
 <li>
-<a href="#N65551">Wo stehen die Autos?</a>
+<a href="#N1000F">Wo stehen die Autos?</a>
 </li>
 	
 		
 <li>
-<a href="#N65564">Wie werden die Autos in Stand gehalten?</a>
+<a href="#N1001C">Wie werden die Autos in Stand gehalten?</a>
 </li>
 	
 		
 <li>
-<a href="#N65574">Welche M&ouml;glichkeiten gibt es, gr&ouml;&szlig;ere Gegenst&auml;nde zu transportieren?</a>
+<a href="#N10023">Welche M&ouml;glichkeiten gibt es, gr&ouml;&szlig;ere Gegenst&auml;nde zu transportieren?</a>
 </li>
 		
 		
 <li>
-<a href="#N65589">Wer tankt das Auto?</a>
+<a href="#N10032">Wer tankt das Auto?</a>
 </li>
 		
 	
@@ -105,34 +105,34 @@
 	
 		
 <li>
-<a href="#N65600">Was kostet mich eine Autofahrt?</a>
+<a href="#N1003D">Was kostet mich eine Autofahrt?</a>
 </li>
 		
 		
 <li>
-<a href="#N65607">Gibt es eine Aufnahmegeb&uuml;hr?</a>
+<a href="#N10044">Gibt es eine Aufnahmegeb&uuml;hr?</a>
 </li>
 		
 		
 <li>
-<a href="#N65614">Gibt es einen Jahresbeitrag?</a>
+<a href="#N1004B">Gibt es einen Jahresbeitrag?</a>
 </li>
 		
 		
 		
 <li>
-<a href="#N65621">Wann muss man die Fahrten bezahlen und wer rechnet das ab?</a>
+<a href="#N10052">Wann muss man die Fahrten bezahlen und wer rechnet das ab?</a>
 </li>
 	
 		
 <li>
-<a href="#N65628">Wie oft wird der km-Preis an den Benzinpreis angepasst?</a>
+<a href="#N10059">Wie oft wird der km-Preis an den Benzinpreis angepasst?</a>
 </li>
 		
 		
 		
 <li>
-<a href="#N65635">Gibt es eine Best&auml;tigung f&uuml;r das Finanzamt f&uuml;r berufliche Fahrten?</a>
+<a href="#N10060">Gibt es eine Best&auml;tigung f&uuml;r das Finanzamt f&uuml;r berufliche Fahrten?</a>
 </li>
 		
 	
@@ -144,27 +144,27 @@
 	
 		
 <li>
-<a href="#N65646">Welche Kosten entstehen bei einem Unfall?</a>
+<a href="#N1006B">Welche Kosten entstehen bei einem Unfall?</a>
 </li>
 			
 		
 <li>
-<a href="#N65653">Wen kontaktiert man, wenn etwas mit einem Auto nicht stimmt?</a>
+<a href="#N10072">Wen kontaktiert man, wenn etwas mit einem Auto nicht stimmt?</a>
 </li>
 			
 		
 <li>
-<a href="#N65660">Was passiert, wenn man geblitzt wird?</a>
+<a href="#N10079">Was passiert, wenn man geblitzt wird?</a>
 </li>
 		
 		
 <li>
-<a href="#N65667">Wie sind die Fahrzeuge versichert und gibt es eine Selbstbeteiligung?</a>
+<a href="#N10080">Wie sind die Fahrzeuge versichert und gibt es eine Selbstbeteiligung?</a>
 </li>
 		
 		
 <li>
-<a href="#N65677">Was tun, wenn ein Auto trotz Buchung nicht da ist?</a>
+<a href="#N1008A">Was tun, wenn ein Auto trotz Buchung nicht da ist?</a>
 </li>
 	
 	
@@ -176,42 +176,42 @@
 	
 			
 <li>
-<a href="#N65691">Wie kurzfristig kann man ein Auto buchen?</a>
+<a href="#N10098">Wie kurzfristig kann man ein Auto buchen?</a>
 </li>
 			
 			
 <li>
-<a href="#N65698">Wie kann man ein Auto buchen?</a>
+<a href="#N1009F">Wie kann man ein Auto buchen?</a>
 </li>
 			
 			
 <li>
-<a href="#N65707">Muss man Autos f&uuml;r volle Stunden buchen?</a>
+<a href="#N100A8">Muss man Autos f&uuml;r volle Stunden buchen?</a>
 </li>
 			
 			
 <li>
-<a href="#N65714">Kann man eine Buchung auch stornieren? Kostet das was?</a>
+<a href="#N100AF">Kann man eine Buchung auch stornieren? Kostet das was?</a>
 </li>
 			
 			
 <li>
-<a href="#N65729">Ist die Nutzung und das Buchen nicht umst&auml;ndlich?</a>
+<a href="#N100BE">Ist die Nutzung und das Buchen nicht umst&auml;ndlich?</a>
 </li>
 			
 			
 <li>
-<a href="#N65736">Was, wenn man die Buchungszeit &uuml;berzieht?</a>
+<a href="#N100C5">Was, wenn man die Buchungszeit &uuml;berzieht?</a>
 </li>
 			
 			
 <li>
-<a href="#N65743">Was tun, wenn alle Autos gebucht sind?</a>
+<a href="#N100CC">Was tun, wenn alle Autos gebucht sind?</a>
 </li>
 			
 			
 <li>
-<a href="#N65753">Kann man das Buchen ausprobieren?</a>
+<a href="#N100D6">Kann man das Buchen ausprobieren?</a>
 </li>
 	
 	
@@ -224,11 +224,11 @@
 	
 		
 <li>
-<a href="#N65764">Kann man den Auto-Teiler auch ausprobieren?</a>
+<a href="#N100E1">Kann man den Auto-Teiler auch ausprobieren?</a>
 </li>
 		
 <li>
-<a href="#N65771">Welche Voraussetzungen brauche ich, um Mitglied zu werden?</a>
+<a href="#N100E8">Welche Voraussetzungen brauche ich, um Mitglied zu werden?</a>
 </li>	
 	
 	
@@ -240,27 +240,27 @@
 	
 			
 <li>
-<a href="#N65782">Was bringt ein Auto-Teiler-Auto &ouml;kologisch?</a>
+<a href="#N100F3">Was bringt ein Auto-Teiler-Auto &ouml;kologisch?</a>
 </li>
 			
 			
 <li>
-<a href="#N65798">D&uuml;rfen Bekannte und Freunde ein MKAT-Auto auch fahren?</a>
+<a href="#N10103">D&uuml;rfen Bekannte und Freunde ein MKAT-Auto auch fahren?</a>
 </li>
 			
 			
 <li>
-<a href="#N65805">Was sind die Ziele des Vereins?</a>
+<a href="#N1010A">Was sind die Ziele des Vereins?</a>
 </li>
 			
 			
 <li>
-<a href="#N65812">Wo kann man sich gr&uuml;ndlich &uuml;ber den MKAT informieren?</a>
+<a href="#N10111">Wo kann man sich gr&uuml;ndlich &uuml;ber den MKAT informieren?</a>
 </li>
 			
 			
 <li>
-<a href="#N65819">Kann ich mit einem MKAT-Auto auch in den Urlaub fahren?</a>
+<a href="#N10118">Kann ich mit einem MKAT-Auto auch in den Urlaub fahren?</a>
 </li>
 	
 	
@@ -273,7 +273,7 @@
 	
 	
 		
-<div id="N65544" class="faq-entry">
+<div class="faq-entry" id="N10008">
 <h2>Welche Autos gibt es?</h2>
 <div class="faq-details">
 <p xmlns:faq="urn:mkat:faq">
@@ -283,7 +283,7 @@
 </div>
 	
 		
-<div id="N65551" class="faq-entry">
+<div class="faq-entry" id="N1000F">
 <h2>Wo stehen die Autos?</h2>
 <div class="faq-details">
 <p>Der Opel Zafira am Rathaus in Kirchseeon mit eigenen Parkplatz, der mit einem Schild f&uuml;r uns ausgewiesen ist. </p>
@@ -294,19 +294,16 @@
 </div>
 	
 		
-<div id="N65564" class="faq-entry">
+<div class="faq-entry" id="N1001C">
 <h2>Wie werden die Autos in Stand gehalten?</h2>
 <div class="faq-details">
-<p>
-
 <p>F&uuml;r jedes Auto gibt es einen Car-Chef, der f&uuml;r die Instandhaltung und Wartung verantwortlich ist. Au&szlig;erdem gibt es f&uuml;r jedes Auto ein Mitglied, das freiwillig daf&uuml;r sorgt, dass das Auto regelm&auml;&szlig;ig ges&auml;ubert wird. Den Wechsel der Sommer- und Winterreifen &uuml;bernimmt ebenfalls der Car-Chef. Die meisten Fahrzeuge fahren allerdings auf Allwetterreifen (M+S), so dass sich der Sommer-Winter-Reifen-Wechsel er&uuml;brigt.</p>
-			
 </div>
 <a href="#top">Zur&uuml;ck</a>
 </div>
 	
 		
-<div id="N65574" class="faq-entry">
+<div class="faq-entry" id="N10023">
 <h2>Welche M&ouml;glichkeiten gibt es, gr&ouml;&szlig;ere Gegenst&auml;nde zu transportieren?</h2>
 <div class="faq-details">
 <p>Bisher ist daf&uuml;r nur der Open Zafira geeignet, und dies auch nur eingeschr&auml;nkt.</p>
@@ -316,7 +313,7 @@
 </div>
 		
 		
-<div id="N65589" class="faq-entry">
+<div class="faq-entry" id="N10032">
 <h2>Wer tankt das Auto?</h2>
 <div class="faq-details">
 <p>
@@ -332,7 +329,7 @@
 	
 	
 		
-<div id="N65600" class="faq-entry">
+<div class="faq-entry" id="N1003D">
 <h2>Was kostet mich eine Autofahrt?</h2>
 <div class="faq-details">
 <p>
@@ -343,7 +340,7 @@
 </div>
 		
 		
-<div id="N65607" class="faq-entry">
+<div class="faq-entry" id="N10044">
 <h2>Gibt es eine Aufnahmegeb&uuml;hr?</h2>
 <div class="faq-details">
 <p>
@@ -354,7 +351,7 @@
 </div>
 		
 		
-<div id="N65614" class="faq-entry">
+<div class="faq-entry" id="N1004B">
 <h2>Gibt es einen Jahresbeitrag?</h2>
 <div class="faq-details">
 <p>Nein. Es fallen jeweils nur Geb&uuml;hren an, wenn man ein Fahrzeug bucht. Man kann also auch einfach nur Mitglied sein, wenn man sehr wenig Auto f&auml;hrt, ohne dass dies sich finanziell auswirkt. </p>
@@ -364,7 +361,7 @@
 		
 		
 		
-<div id="N65621" class="faq-entry">
+<div class="faq-entry" id="N10052">
 <h2>Wann muss man die Fahrten bezahlen und wer rechnet das ab?</h2>
 <div class="faq-details">
 <p>Vor jeder Fahrt ist der aktuelle Kilometerstand zu pr&uuml;fen und nach jeder Fahrt der neue Stand in das Fahrtenbuch einzutragen. Das Fahrtenbuch wird viertelj&auml;hrlich vom Kassenwart des Vereins ausgewertet und abgerechnet. Sie erhalten eine Rechnung, die durch das bequeme Lastschriftverfahren beglichen wird.</p>
@@ -373,7 +370,7 @@
 </div>
 	
 		
-<div id="N65628" class="faq-entry">
+<div class="faq-entry" id="N10059">
 <h2>Wie oft wird der km-Preis an den Benzinpreis angepasst?</h2>
 <div class="faq-details">
 <p>		
@@ -385,7 +382,7 @@
 		
 		
 		
-<div id="N65635" class="faq-entry">
+<div class="faq-entry" id="N10060">
 <h2>Gibt es eine Best&auml;tigung f&uuml;r das Finanzamt f&uuml;r berufliche Fahrten?</h2>
 <div class="faq-details">
 <p>Bei jeder Buchung kann man einen Verwendungszweck angeben, der der Information anderer Mitglieder dient und bei der Abrechnung als Zweck aufgef&uuml;hrt wird. Da man die Abrechnung beim Finanzamt zum Nachweis beif&uuml;gen kann/muss, hat man es selbst in der Hand, den richtigen Zweck anzugeben, um die Fahrten dann bei der Steuer geltend zu machen.</p>
@@ -398,7 +395,7 @@
 	
 	
 		
-<div id="N65646" class="faq-entry">
+<div class="faq-entry" id="N1006B">
 <h2>Welche Kosten entstehen bei einem Unfall?</h2>
 <div class="faq-details">
 <p>
@@ -409,7 +406,7 @@
 </div>
 			
 		
-<div id="N65653" class="faq-entry">
+<div class="faq-entry" id="N10072">
 <h2>Wen kontaktiert man, wenn etwas mit einem Auto nicht stimmt?</h2>
 <div class="faq-details">
 <p>
@@ -420,7 +417,7 @@
 </div>
 			
 		
-<div id="N65660" class="faq-entry">
+<div class="faq-entry" id="N10079">
 <h2>Was passiert, wenn man geblitzt wird?</h2>
 <div class="faq-details">
 <p>Sie sind f&uuml;r alle Sch&auml;den und Strafen verantwortlich, die durch die Nutzung eines Fahrzeugs entstehen. Wer also geblitzt wird, muss wie bei einem Privat-Fahrzeug daf&uuml;r gerade stehen und die Strafe zahlen.</p>
@@ -429,7 +426,7 @@
 </div>
 		
 		
-<div id="N65667" class="faq-entry">
+<div class="faq-entry" id="N10080">
 <h2>Wie sind die Fahrzeuge versichert und gibt es eine Selbstbeteiligung?</h2>
 <div class="faq-details">
 <p>F&uuml;r die Autos bestehen Kfz-Haftpflicht-Versicherungen bis zu 50 Mio &euro; (bei Personensch&auml;den 8 Mio &euro; je gesch&auml;digte Person). F&uuml;r alle Fahrzeuge wurden auch Voll- und Teilkasko-Versicherungen abgeschlossen.</p>
@@ -439,7 +436,7 @@
 </div>
 		
 		
-<div id="N65677" class="faq-entry">
+<div class="faq-entry" id="N1008A">
 <h2>Was tun, wenn ein Auto trotz Buchung nicht da ist?</h2>
 <div class="faq-details">
 <p>
@@ -457,7 +454,7 @@
 	
 	
 			
-<div id="N65691" class="faq-entry">
+<div class="faq-entry" id="N10098">
 <h2>Wie kurzfristig kann man ein Auto buchen?</h2>
 <div class="faq-details">
 <p>
@@ -468,7 +465,7 @@
 </div>
 			
 			
-<div id="N65698" class="faq-entry">
+<div class="faq-entry" id="N1009F">
 <h2>Wie kann man ein Auto buchen?</h2>
 <div class="faq-details">
 <p>
@@ -482,7 +479,7 @@
 </div>
 			
 			
-<div id="N65707" class="faq-entry">
+<div class="faq-entry" id="N100A8">
 <h2>Muss man Autos f&uuml;r volle Stunden buchen?</h2>
 <div class="faq-details">
 <p>
@@ -493,7 +490,7 @@
 </div>
 			
 			
-<div id="N65714" class="faq-entry">
+<div class="faq-entry" id="N100AF">
 <h2>Kann man eine Buchung auch stornieren? Kostet das was?</h2>
 <div class="faq-details">
 <p>Das Stornieren selbst kostet nichts. V&ouml;llig kostenfrei l&auml;sst sich jede Buchung bis zu 12 Stunden vor dem Starttermin aufheben. Wollen Sie die Buchung kurzfristig (weniger als 12 Stunden vor dem Starttermin) zur&uuml;cknehmen, m&uuml;ssen Sie die Zeitgeb&uuml;hren trotzdem bezahlen &ndash; es sein denn, jemand anderes bucht das freigewordene Fahrzeug in der gleichen Zeit, die Sie vorher gebucht hatten. Dann werden die Zeitgeb&uuml;hren von dem erhoben, der das Fahrzeug tats&auml;chlich nutzt.</p>
@@ -507,7 +504,7 @@
 </div>
 			
 			
-<div id="N65729" class="faq-entry">
+<div class="faq-entry" id="N100BE">
 <h2>Ist die Nutzung und das Buchen nicht umst&auml;ndlich?</h2>
 <div class="faq-details">
 <p>
@@ -518,7 +515,7 @@
 </div>
 			
 			
-<div id="N65736" class="faq-entry">
+<div class="faq-entry" id="N100C5">
 <h2>Was, wenn man die Buchungszeit &uuml;berzieht?</h2>
 <div class="faq-details">
 <p>
@@ -529,7 +526,7 @@
 </div>
 			
 			
-<div id="N65743" class="faq-entry">
+<div class="faq-entry" id="N100CC">
 <h2>Was tun, wenn alle Autos gebucht sind?</h2>
 <div class="faq-details">
 <p>
@@ -543,7 +540,7 @@
 </div>
 			
 			
-<div id="N65753" class="faq-entry">
+<div class="faq-entry" id="N100D6">
 <h2>Kann man das Buchen ausprobieren?</h2>
 <div class="faq-details">
 <p>Auch das geht: Im Buchungssystem gibt es einen Demo-Modus und -Zugang, der nur dem Ausprobieren dient (Benutzername: demo, Passwort: demo). Damit l&auml;sst sich alles durchspielen, bevor man im echten System Kosten verursacht. Jeder kann im Demo-Modus durchspielen, wie das Stornieren und Verl&auml;ngern von Buchungen funktioniert.</p>
@@ -557,7 +554,7 @@
 	
 	
 		
-<div id="N65764" class="faq-entry">
+<div class="faq-entry" id="N100E1">
 <h2>Kann man den Auto-Teiler auch ausprobieren?</h2>
 <div class="faq-details">
 <p>
@@ -567,7 +564,7 @@
 <a href="#top">Zur&uuml;ck</a>
 </div>
 		
-<div id="N65771" class="faq-entry">
+<div class="faq-entry" id="N100E8">
 <h2>Welche Voraussetzungen brauche ich, um Mitglied zu werden?</h2>
 <div class="faq-details">
 <p>
@@ -582,7 +579,7 @@
 	
 	
 			
-<div id="N65782" class="faq-entry">
+<div class="faq-entry" id="N100F3">
 <h2>Was bringt ein Auto-Teiler-Auto &ouml;kologisch?</h2>
 <div class="faq-details">
 <p>Ein Auto-Teiler-Auto ersetzt im Durchschnitt 10 normale Autos. Man erspart als Mitglied im Verein der Natur also den Bau von 4 bis 8 Autos (und die Energie, die daf&uuml;r n&ouml;tig ist und die Abgase &ndash; auch CO2 &ndash;, die bei der Produktion entstehen).</p>
@@ -594,7 +591,7 @@
 </div>
 			
 			
-<div id="N65798" class="faq-entry">
+<div class="faq-entry" id="N10103">
 <h2>D&uuml;rfen Bekannte und Freunde ein MKAT-Auto auch fahren?</h2>
 <div class="faq-details">
 <p>
@@ -605,7 +602,7 @@
 </div>
 			
 			
-<div id="N65805" class="faq-entry">
+<div class="faq-entry" id="N1010A">
 <h2>Was sind die Ziele des Vereins?</h2>
 <div class="faq-details">
 <p>Der Verein tritt f&uuml;r ein menschen- und umweltvertr&auml;gliches Verkehrswesen und f&uuml;r eine Verringerung der Umweltbelastungen ein. Insbesondere durch eine Reduzierung des motorisierten Verkehrs, des sparsamen Einsatzes von Energie, Raum und Rohstoffen, bevorzugtem Einsatz umweltvertr&auml;glicher Verkehrsmittel und einer umweltschonenden und sozialvertr&auml;glichen Fahrweise.</p>
@@ -614,7 +611,7 @@
 </div>
 			
 			
-<div id="N65812" class="faq-entry">
+<div class="faq-entry" id="N10111">
 <h2>Wo kann man sich gr&uuml;ndlich &uuml;ber den MKAT informieren?</h2>
 <div class="faq-details">
 <p>Am besten hier auf unserer Homepage: Hier kann man sich die aktuellen Preise, die Satzung, Nutzungsbedingungen, die aktuelle Autoflotte und neuste Entwicklungen informieren. Aber nat&uuml;rlich auch telefonisch beim Vorstand oder den Presse-Verantwortlichen.</p>
@@ -623,7 +620,7 @@
 </div>
 			
 			
-<div id="N65819" class="faq-entry">
+<div class="faq-entry" id="N10118">
 <h2>Kann ich mit einem MKAT-Auto auch in den Urlaub fahren?</h2>
 <div class="faq-details">
 <p>Ja, es ist m&ouml;glich, ein Auto auch f&uuml;r einen Urlaub zu buchen. F&uuml;r eine Strecke von &uuml;ber 300 km (bis 1000 km) gibt es einen verg&uuml;nstigten Tarif pro Kilometer. Bei Kleinwagen sind das 0,05 &euro; weniger, bei allen anderen 0,10 &euro; weniger pro Kilometer.</p>
