update telephone numbers and make them clickable on mobile

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta charset="UTF-8">
-	
+
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
-	
+
 	<title>MKAT</title>
-	
+
 	<script type="text/javascript">
 	function selectMenuById ( id ) {
 		$('.mkat-menu li').removeClass("active");
@@ -19,17 +19,17 @@
 		if ( p.size () == 0 )
 			$("#first").addClass("active");
 		else
-			p.addClass("active");	
+			p.addClass("active");
 	}
 	function selectMenu ( ele ) {
 		$('.mkat-menu li').removeClass("active");
-		ele.parent().addClass("active");	
+		ele.parent().addClass("active");
 	}
 	</script>
 </head>
 
 <body>
-	
+
 	<nav class="mkat-nav" role="navigation">
 		<div class="container-fluid">
 			<div class="row">
@@ -51,25 +51,25 @@
 				        		<li><a class="menu-entry" href="legal.html#disclaimer" target="_blank">Disclaimer</a></li>
 				        		<li><a class="menu-entry" href="legal.html#privacy" target="_blank">Datenschutzerklärung</a></li>
 				        	</ul>
-				        </li>				        
+				        </li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="main" class="container-fluid">
-	
+
 	<div class="row">
 		<div class="col-xs-12 imagebox">
 			 <img src="images/MKAT_web_head_street_1280x365_150101.jpg" class="img-responsive"/>
 		</div>
 	</div>
-	
+
 	<div class="row">
-	
+
 	<div class="col-xs-0 col-md-1 col-lg-2"></div>
-	
+
 	<div class="col-xs-12 col-md-10 col-lg-8">
 
 	<div id="wer" class="topic"></div>
@@ -86,7 +86,7 @@ Wir sind der neue Verein, der Markt Kirchseeon mobil macht. Wir wollen postiv zu
 </p><p>
 Autoteiler sparen Geld, da sie selber kein Auto und keinen Stellplatz mehr finanzieren und unterhalten müssen.
 </p><p>
-Autoteilen ist wirtschaftlich, da es keinen Jahres oder Monatsbeitrag kostet. Es fallen nur bei der tatsächlichen Autobenutzung Kosten an. Wir arbeiten nicht gewinnorientiert und halten die Nutzungskosten damit niedrig. 
+Autoteilen ist wirtschaftlich, da es keinen Jahres oder Monatsbeitrag kostet. Es fallen nur bei der tatsächlichen Autobenutzung Kosten an. Wir arbeiten nicht gewinnorientiert und halten die Nutzungskosten damit niedrig.
 </p><p>
 Autoteilen soll anregen öfters mal zu Fuß zu gehen, mit dem Rad zu fahren, Fahrgemeinschaften zu bilden oder öffentliche Verkehrsmittel zu benutzen.
 </p><p>
@@ -100,7 +100,7 @@ Autoteilen kann den Zweitwagen im Haushalt sinnvoll ersetzen.
 </p><p>
 Autoteiler können über die befreundeten Vereine der Nachbarorte im Landkreis Autos wie z.B. Transporter, 9-Sitzer-Busse oder Anhänger buchen.
 </p><p>
-Autoteiler müssen aber auch vorausplanend denken, da nur bei rechtzeitiger Buchung auch die Wahrscheinlichkeit hoch ist, dass das Auto in dieser Zeit verfügbar ist. 
+Autoteiler müssen aber auch vorausplanend denken, da nur bei rechtzeitiger Buchung auch die Wahrscheinlichkeit hoch ist, dass das Auto in dieser Zeit verfügbar ist.
 </p><p>
 Autoteiler haben eventuell einen Weg zum Stellplatz des Autoteiler-Autos zurückzulegen.
 </p><p>
@@ -113,14 +113,14 @@ Wie schaut ihre persönliche Bewertung der Vor- und Nachteile unter dem Strich a
 Sind die Mittel und Zeit, welche man für das eigene Auto aufbringen muss, nicht besser in Wohneigentum oder anderen Dingen investiert?
 
 Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorstellt !
-	
-	
-	
-	
-	
+
+
+
+
+
 
 	<div id="member" class="topic"></div>
-	
+
 	<h2>Mitglied werden</h2>
 	<div style="float: right;"><a href="downloads/beitrittserklaerung_MKAT.pdf" target="_blank"><img src="images/ICON_beitritt_MKAT_140107.png" width="200" height="200"/></a></div>
 
@@ -132,25 +132,25 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	<li>gemeinschaftliche Nutzung von MVV-Zeitkarten</li>
 	<li>weitere Fahrzeuge bei benachbarten Vereinen</li></ul>
 	<p>Sind sie neugierig geworden? Dann rufen sie uns an.<br>
-	Beate Kiss (Telefon: 08091 7208)<br>
-	Rudolf Milde (Telefon: 08091 3137)</p>
-	
+	Beate Kiss (Telefon: <a href="tel:+4915735548686">+49 1573/554 86 86</a>)<br>
+	Ivonne Reimann (Telefon: <a href="tel:+4980913980069">+49 8091/39 800 69</a>)</p>
+
 	<div  id="downloads" class="topic"></div>
-	
+
 	<h2>Downloads</h2>
 	<p>
 	<ul>
 	<li><a href="downloads/beitrittserklaerung_MKAT.pdf" target="_blank">Beitrittserklärung MKAT</a></li>
 	 <!-- <li><a href="downloads/satzung.pdf" target="_blank">Unsere Satzung</a></li> -->
-	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>	
-	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>	
+	 <li><a href="downloads/nutzungsordnung.pdf" target="_blank">Unsere Nutzungsordnung</a></li>
+	 <li><a href="downloads/preisliste.pdf" target="_blank">Unsere Preisliste</a></li>
 	 <li><a href="downloads/mvv.pdf" target="_blank">Regeln für die Nutzung von MVV-Zeitkarten</a></li>
 	 <!-- <li><a href="downloads/quernutzung.pdf" target="_blank">Quernutzungsordnung mit unseren Partner-Vereinen</a></li>  -->
 	</ul>
 
 	<p>
 	Eine Quernutzung ist mit den folgenden Vereinen möglich:
-	<ul><li><a href="http://www.carsharing-vaterstetten.de/" target="_blank">Vaterstettener Autoteiler e.V. - VAT</a> (<a href="http://www.carsharing-vaterstetten.de/VAT/Preise" target="_blank">Preisliste</a>, <a href="http://www.carsharing-vaterstetten.de/uploads/VAT/nutzungsordnung.pdf" target="_blank">Nutzungsvereinbarung</a>)</li> 
+	<ul><li><a href="http://www.carsharing-vaterstetten.de/" target="_blank">Vaterstettener Autoteiler e.V. - VAT</a> (<a href="http://www.carsharing-vaterstetten.de/VAT/Preise" target="_blank">Preisliste</a>, <a href="http://www.carsharing-vaterstetten.de/uploads/VAT/nutzungsordnung.pdf" target="_blank">Nutzungsvereinbarung</a>)</li>
 	<li><a href="http://www.carsharing-zorneding.de" target="_blank">Zornedinger Autoteiler e.V. - ZAT</a> (<a href="http://www.carsharing-zorneding.de/Docs/Tarif.pdf" target="_blank">Preisliste</a>, <a href="http://www.carsharing-zorneding.de/Docs/ZAT-Nutzungsordnung.pdf" target="_blank">Nutzungsvereinbarung</a>)</li>
 	<li><a href="http://www.grafingerautoteiler.de" target="_blank">Grafinger Autoteiler e.V. - GAT</a> (<a href="http://www.grafingerautoteiler.de/der_verein/carsharing/preise.html" target="_blank">Preisliste</a>, <a href="http://www.grafingerautoteiler.de/uploads/doc/Nutzungsordnung_09-08-2014.pdf" target="_blank">Nutzungsvereinbarung</a>)</li>
 	</ul>
@@ -160,7 +160,7 @@ Autoteilen geht in Alltag mit Sicherheit leichter, als man es sich zuerst vorste
 	<p>
 Markt Kirchseeoner Auto-Teiler e.V. (MKAT)<br>
 Talweg 11, 85614 Kirchseeon<br>
-Telefon: +49 80 91/5 56 96 56<br>
+Telefon: <a href="tel:+4980915569656">+49 80 91/556 96 56</a><br>
 http://www.mk-autoteiler.de<br>
 E-Mail: <a href="mailto:info@mk-autoteiler.de">info@mk-autoteiler.de</a></p>
 <p>
@@ -171,7 +171,7 @@ Vorstand:	<a href="mailto:rmeiler@mk-autoteiler.de">Reinhold Meiler</a><br>
 Vorstand:	<a href="mailto:sbauer@mk-autoteiler.de">Stefan Bauer</a><br>
 Design:	<a href="mailto:eeeveee@mk-autoteiler.de">ivonne Reimann</a></p>
 	 <p>
-Kontoverbindung:<br>	 
+Kontoverbindung:<br>
 Kontonummer:	27 8181 45<br>
 Bank:	Kreissparkasse München Starnberg Ebersberg<br>
 BLZ:	702 501 50<br>
@@ -179,7 +179,7 @@ IBAN:	DE62 7025 0150 0027 8181 45 <br>
 BIC:	BYLADEM1KMS<br>
 </p>
 
-Der MKAT ist Mitglied im Bundesverband CarSharing e.V. 
+Der MKAT ist Mitglied im Bundesverband CarSharing e.V.
 
 
 
@@ -187,21 +187,21 @@ Der MKAT ist Mitglied im Bundesverband CarSharing e.V.
 
 
 	</div><!-- inner -->
-	
+
 	</div><!-- row -->
-	
+
 	</div><!-- global -->
-	
+
 	<script src="js/jquery-1.12.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/custom.js"></script>
 	<script src="js/waypoints.js"></script>
-	
+
 	<script src="js/jquery.scrollTo.js"></script>
 	<script src="js/jquery.localScroll.js"></script>
-	
+
 	<script>
-	
+
 	/*
 	$( ".menu-entry" ).bind( "click", function() {
 		  document.location=this.href;
@@ -220,7 +220,7 @@ Der MKAT ist Mitglied im Bundesverband CarSharing e.V.
 			selectMenuById ( id );
 		}
 	});
-	
+
 	$('.topic').waypoint({
 		handler: function() {
 			selectMenuById ( this.id );
